--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,223 @@
   scroll-behavior: smooth;
   color-scheme: dark;
 }
+
+.parent {
+  display: grid;
+  min-width: 900px;
+  min-height: 700px;
+  grid-template-columns: repeat(24, 1fr);
+  grid-template-rows: repeat(20, 1fr);
+  grid-column-gap: 4px;
+  grid-row-gap: 4px;
+}
+
+.div1 {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  background-color: #5c0a0c;
+  grid-area: 1 / 1 / 2 / 25;
+}
+
+.div1 p {
+  text-align: center;
+  margin: auto;
+}
+
+.upload-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 31px;
+  height: 31px;
+  border: 1px solid #fff;
+  background-color: #f89938;
+}
+
+.upload-box img {
+  cursor: pointer;
+}
+
+#progress-bar {
+  position: absolute;
+  width: 1px;
+  margin: 0 10px;
+  height: 100%;
+  background-color: #f89938;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+button {
+  padding: 0 4px;
+  margin: 0 8px;
+  background-color: #f89938;
+  border: none;
+  border-radius: 5px;
+}
+
+main {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  background-color: #5c0a0c;
+  grid-area: 10 / 6 / 19 / 22;
+}
+
+#equalizer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 150px;
+}
+
+.bar {
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  background-color: #fff;
+  animation: equalizer-animation 0.3s alternate infinite;
+}
+
+@keyframes equalizer-animation {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(2);
+  }
+}
+
+main p {
+  text-align: center;
+  margin: auto;
+}
+
+.paino {
+  min-height: 290px;
+}
+
+.keys {
+  position: relative;
+}
+
+.key:active {
+  background-color: rgb(0, 255, 0);
+}
+
+.white-keys {
+  display: flex;
+  flex-direction: column;
+}
+
+.black-keys {
+  position: relative;
+  display: flex;
+}
+
+.black-key {
+  width: 50px;
+  height: 13px;
+  border-radius: 0px 3px 3px 0px;
+  background-color: #000;
+  position: absolute;
+}
+
+.black-key:nth-child(1) {
+  top: 15px;
+}
+
+.black-key:nth-child(2) {
+  top: 38px;
+}
+
+.black-key:nth-child(3) {
+  top: 81px;
+}
+
+.black-key:nth-child(4) {
+  top: 104px;
+}
+
+.black-key:nth-child(5) {
+  top: 127px;
+}
+
+.black-key:nth-child(6) {
+  top: 169px;
+}
+
+.black-key:nth-child(7) {
+  top: 192px;
+}
+
+.black-key:nth-child(8) {
+  top: 214px;
+}
+
+.black-key:nth-child(9) {
+  top: 257px;
+}
+
+.black-key:nth-child(10) {
+  top: 280px;
+}
+
+.white-key {
+  width: 110px;
+  height: 22px;
+  background-color: #fff;
+  border-radius: 0px 3px 3px 0px;
+  border: solid #000 1px;
+}
+
+.div3 {
+  background-color: #5c0a0c;
+  grid-area: 9 / 6 / 10 / 22;
+}
+.div4 {
+  background-color: #5c0a0c;
+  grid-area: 2 / 6 / 9 / 8;
+}
+.div5 {
+  position: relative;
+  display: flex;
+  align-items: center;
+  background-color: #212426;
+  grid-area: 4 / 8 / 9 / 22;
+}
+.div6 {
+  background-color: #f89938;
+  grid-area: 2 / 8 / 4 / 22;
+}
+.div7 {
+  background-color: #5c0a0c;
+  grid-area: 2 / 22 / 20 / 25;
+}
+.div8 {
+  background-color: #5c0a0c;
+  grid-area: 2 / 2 / 20 / 6;
+}
+.div9 {
+  background-color: #5c0a0c;
+  grid-area: 2 / 1 / 20 / 2;
+}
+.div10 {
+  background-color: #5c0a0c;
+  grid-area: 19 / 6 / 20 / 22;
+}
+.div11 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #212426;
+  grid-area: 20 / 1 / 21 / 25;
+}
+
+#play,#pause{
+  cursor: pointer;
+}
