--- a/css/style.css
+++ b/css/style.css
@@ -79,24 +79,14 @@ main {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  height: 150px;
+  height: 200px;
+  width: 100%;
 }
 
 .bar {
-  height: 10px;
-  width: 10px;
-  margin: 0 2px;
-  background-color: #fff;
-  animation: equalizer-animation 0.3s alternate infinite;
-}
-
-@keyframes equalizer-animation {
-  from {
-    transform: scaleY(1);
-  }
-  to {
-    transform: scaleY(2);
-  }
+  width: 2px;
+  margin: 0 5px;
+  background-color: #8dff8e;
 }
 
 main p {
@@ -113,7 +103,7 @@ main p {
 }
 
 .key:active {
-  background-color: rgb(0, 255, 0);
+  background-color: #8dff8e;
 }
 
 .white-keys {
@@ -163,7 +153,7 @@ main p {
 }
 
 .black-key:nth-child(8) {
-  top: 214px;
+  top: 236px;
 }
 
 .black-key:nth-child(9) {
@@ -206,6 +196,8 @@ main p {
   grid-area: 2 / 22 / 20 / 25;
 }
 .div8 {
+  display: flex;
+  align-items: end;
   background-color: #5c0a0c;
   grid-area: 2 / 2 / 20 / 6;
 }
@@ -225,6 +217,15 @@ main p {
   grid-area: 20 / 1 / 21 / 25;
 }
 
-#play,#pause{
+.hidden{
+  display: none !important;
+}
+
+#play,#pause, #stop{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2px 5px;
   cursor: pointer;
 }
+
